fix alignment on image load

--- a/src/index.css
+++ b/src/index.css
@@ -210,3 +210,7 @@ html {
 .rainbow-modal_content .rainbow-input_container div {
   flex: 3;
 }
+
+.ai-fs {
+  align-items: flex-start;
+}
